--- a/multiplicar-deployment.yaml
+++ b/multiplicar-deployment.yaml
@@ -26,10 +26,11 @@ spec:
         name: multiplicar
         resources:
            requests:
-              memory: "256Mi"
-              cpu: "300m"
+              memory: "64Mi"
+              cpu: "100m"
            limits:
-              memory: "512Mi"
-              cpu: "400m"
+              memory: "128Mi"
+              cpu: "100m"
         ports:
         - containerPort: 8081
+      restartPolicy: Never
