--- a/multiplicar-deployment.yaml
+++ b/multiplicar-deployment.yaml
@@ -33,4 +33,4 @@ spec:
               cpu: "100m"
         ports:
         - containerPort: 8081
-      restartPolicy: Never
+      #restartPolicy: Never
