--- a/sumar-deployment.yaml
+++ b/sumar-deployment.yaml
@@ -35,4 +35,4 @@ spec:
               cpu: "400m"
         ports:
         - containerPort: 8080
-      restartPolicy: Never
+      #restartPolicy: Never
