--- a/sumar-hpa.yaml
+++ b/sumar-hpa.yaml
@@ -13,7 +13,7 @@ spec:
   - type: Resource
     resource:
       name: memory
-      targetAverageValue: 50
+      targetAverageValue: 1000Mi
   - type: Resource
     resource:
       name: cpu
