--- a/multiplicar-hpa.yaml
+++ b/multiplicar-hpa.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: multiplicar-hpa
@@ -8,13 +8,11 @@ spec:
     kind: Deployment
     name: multiplicar-deployment
   minReplicas: 1
-  maxReplicas: 10
+  maxReplicas: 3
   metrics:
-  #- type: Resource
-    #resource:
-    #  name: memory
-    #  targetAverageValue: 1000Mi
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 50
+      target:
+        type: Utilization
+        averageUtilization: 50
